--- a/Pid_Kursach/Pid_Kursach.csproj
+++ b/Pid_Kursach/Pid_Kursach.csproj
@@ -58,6 +58,12 @@
     <Compile Include="CarModels.Designer.cs">
       <DependentUpon>CarModels.cs</DependentUpon>
     </Compile>
+    <Compile Include="CarNames.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CarNames.Designer.cs">
+      <DependentUpon>CarNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="checkUser.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="Form1.cs">
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CarModels.resx">
       <DependentUpon>CarModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CarNames.resx">
+      <DependentUpon>CarNames.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
