--- a/Pid_Kursach/Pid_Kursach.csproj
+++ b/Pid_Kursach/Pid_Kursach.csproj
@@ -46,12 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AdminForm.Designer.cs">
-      <DependentUpon>AdminForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="CarModels.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,12 +78,6 @@
       <DependentUpon>Clients.cs</DependentUpon>
     </Compile>
     <Compile Include="DataBase.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Images\Sales.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,22 +102,11 @@
     <Compile Include="Managers.Designer.cs">
       <DependentUpon>Managers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Md5.cs" />
     <Compile Include="MyFirstCarDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MyFirstCarDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="NewDetForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NewDetForm.Designer.cs">
-      <DependentUpon>NewDetForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NewRidForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NewRidForm.Designer.cs">
-      <DependentUpon>NewRidForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -145,9 +122,6 @@
     <Compile Include="Users.Designer.cs">
       <DependentUpon>Users.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AdminForm.resx">
-      <DependentUpon>AdminForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CarModels.resx">
       <DependentUpon>CarModels.cs</DependentUpon>
     </EmbeddedResource>
@@ -163,9 +137,6 @@
     <EmbeddedResource Include="Clients.resx">
       <DependentUpon>Clients.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Images\Sales.resx">
       <DependentUpon>Sales.cs</DependentUpon>
     </EmbeddedResource>
@@ -177,12 +148,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Managers.resx">
       <DependentUpon>Managers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NewDetForm.resx">
-      <DependentUpon>NewDetForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NewRidForm.resx">
-      <DependentUpon>NewRidForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -238,6 +203,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\lupa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\png-transparent-computer-icons-user-login-icon-miscellaneous-monochrome-black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\png-transparent-login-computer-i.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Blue+and+Orange_1 %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Blue+and+Orange_1 %283%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MyFirstCar %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MyFirstCar %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\192-1925162_login-icon-png-trans.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
